# soft_renderer

./: .gitignore  CMakeLists.txt  main.cpp
application/: CMakeLists.txt  application.cpp  application.h  image.h
base/: base.h
color/: CMakeLists.txt  color.h
framework/: CMakeLists.txt  event_center.cpp  event_center.h
gpu/: CMakeLists.txt  buffer_object.h  camera.h  color.h  frame_buffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h  shader.h
math/: basic_geo.h  color.h  geo.h  lerp.h  mat.h  maths.h  tranform.h  transform.h  vec.h
raster/: CMakeLists.txt  raster.h
test/: math_test.cpp  rasterize_line_aa_test.cpp  rasterize_line_bresenham_test.cpp
test/features/: camera_test.cpp
test/graphics_pipeline/: ebo_vao_vbo_test.cpp  test_draw.cpp
test/image/: image_bilinear.cpp  image_test.cpp  image_wrap_fit_test.cpp
test/math/: matrix_test.cpp  transform_test.cpp
test/rasterization/: rasterize_line_aa_test.cpp  rasterize_line_bresenham_test.cpp
test/rasterization/line/: line_bresenham_colored_test.cpp  rasterize_line_aa_test.cpp  rasterize_line_bresenham_test.cpp
test/rasterization/triangle/: rasterize_triangle.cpp  triangle_colored_test.cpp  triangle_textured_test.cpp
test/transform/: spinning_triangle_test.cpp  test_transform.cpp
